--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -28,7 +28,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Say hello
         run: echo "Hello world!"
-
+      
+      - name: Now it is
+        run: date
+        
+      - name: Directory content
+        run: ls -l
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
        # run: |
