--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
@@ -17,5 +17,7 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
-      
-  
+      - name: build
+        run: npm run build
+      - name: test
+        run: npm test
