--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,8 +22,16 @@ jobs:
       - name: test
         run: npm test
       - name: e2e tests
-        uses: cypress-io/github-action@v2
+      - uses: cypress-io/github-action@v2 #prije bilo bez crtice ('-')
         with:
           command: npm run test:e2e #specificira kako runnat test
           start: npm run start-prod #skripta koja starta server
           wait-on: http://localhost:5000 #kaze da prije nego se runnaju testovi, server se mora pokrenut na toj adresi
+
+      - name: Deploy
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "part11-app" #Must be unique in Heroku
+          heroku_email: "bornaparo@gmail.com"
