--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,8 +28,8 @@ jobs:
           start: npm run start-prod #skripta koja starta server
           wait-on: http://localhost:5000 #kaze da prije nego se runnaju testovi, server se mora pokrenut na toj adresi
 
-      - name: Deploy
-        uses: actions/checkout@v2
+      - name: Deploy to heroku
+        #uses: actions/checkout@v2 #prije bilo bez ovog
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
