--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,17 +19,17 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
-      #- name: test #maknuo ove testove tako da se brze deploya na heroku,, dok ne skuzim u cemu je problem s herokuom onda cu ih vratit
-      #  run: npm test
-      # - name: e2e tests
-      #uses: cypress-io/github-action@v2 #prije bilo bez crtice ('-')
-      # with:
-      # command: npm run test:e2e #specificira kako runnat test
-      #start: npm run start-prod #skripta koja starta server
-      # wait-on: http://localhost:5000 #kaze da prije nego se runnaju testovi, server se mora pokrenut na toj adresi
+      - name: test #maknuo ove testove tako da se brze deploya na heroku,, dok ne skuzim u cemu je problem s herokuom onda cu ih vratit
+        run: npm test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2 #prije bilo bez crtice ('-')
+        with:
+          command: npm run test:e2e #specificira kako runnat test
+          start: npm run start-prod #skripta koja starta server
+          wait-on: http://localhost:5000 #kaze da prije nego se runnaju testovi, server se mora pokrenut na toj adresi
 
       - name: Deploy to heroku
-        #uses: actions/checkout@v2 #prije bilo bez ovog
+        uses: actions/checkout@v2 #prije bilo bez ovog
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
