--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "part11-app" #Must be unique in Heroku
           heroku_email: "bornaparo@gmail.com"
+          healthcheck: "https://part11-app.herokuapp.com/health" #kao check neki da vidi ako aplikacija radi nakon deploymenta
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
