--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  a_test_job:
+  a_test_job: #da vidim sta ce ispisat
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
