--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,5 +24,5 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: provjera commit poruke
         env:
-          COMMIT_PROVJERA: ${{ toJson(github.event.commits.*.message).join(" ").contains("skip") }}
+          COMMIT_PROVJERA: ${{ toJson(github.event.commits.*.message).join(" ") }}
         run: echo "$COMMIT_PROVJERA"
