--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,5 +25,5 @@ jobs:
       - name: provjera commit poruke
         env:
           #COMMIT_PROVJERA: ${{ toJson(github.event.commits.*.message) }}
-          X: ${{ join(toJson(github.event.commits.*.message), " ") }}
+          X: ${{ join(toJson(github.event.commits.*.message), ' ') }}
         run: echo "$X"
