--- a/.github/workflows/periodic_health_check.yml
+++ b/.github/workflows/periodic_health_check.yml
@@ -14,7 +14,7 @@ jobs:
         uses: jtalk/url-health-check-action@v1.5
         with:
           # Check the following URLs one by one sequentially
-          url: https://part11-app.herokuapp.com/health
+          url: https://part11-app.herokuapp.com/health_namjerno_krivo
           # Follow redirects, or just report success on 3xx status codes
           follow-redirect: no # Optional, defaults to "no"
           # Fail this action after this many failed attempts
