--- a/.github/workflows/periodic_health_check.yml
+++ b/.github/workflows/periodic_health_check.yml
@@ -1,9 +1,8 @@
 name: Periodic health check
 
 on:
-  push: #ovo promjeni poslije na schedule i dodaj schedule
-    branches:
-      - master
+  schedule:
+    - cron: "*/5 * * * *"
 
 jobs:
   periodic_health_check:
@@ -14,7 +13,7 @@ jobs:
         uses: jtalk/url-health-check-action@v1.5
         with:
           # Check the following URLs one by one sequentially
-          url: https://part11-app.herokuapp.com/health_namjerno_krivo
+          url: https://part11-app.herokuapp.com/health
           # Follow redirects, or just report success on 3xx status codes
           follow-redirect: no # Optional, defaults to "no"
           # Fail this action after this many failed attempts
